config/route.yaml
apiVersion: serving.knative.dev/v1alpha1
kind: Service
metadata:
  name: create-route
  namespace: default
spec:
  template:
    spec:
      containers:
        - image: ../eventdetails
