config/svc-grpc-ping.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: grpc-ping
  namespace: default
spec:
  template:
    spec:
      containers:
      - image: docker.io/daisyycguo/grpc-ping-go
        ports:
          - name: h2c
            containerPort: 8080
